# MCP_ESG_index50

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: implementation-summary.md  pm-rollout-recap.html
docs/decisions/: 001-pgvector-vs-chroma.md  002-embedding-versioning.md  003-mcp-as-adapter.md  004-remote-transport-and-auth.md
docs/superpowers/plans/: 2026-06-02-add-claude-esg-mcp-server.md
openspec/: backlog.md  config.yaml  project-brief.md
openspec/changes/add-claude-esg-mcp-server/: proposal.md  tasks.md
openspec/changes/add-claude-esg-mcp-server/specs/claude-esg-mcp-retrieval/: spec.md
openspec/changes/archive/2026-06-08-add-claude-esg-mcp-server/: design.md  tasks.md
openspec/specs/claude-esg-mcp-retrieval/: spec.md
openspec/specs/esg-platform-v2/: spec.md
src/claude_esg_mcp/: __init__.py  config.py  embeddings.py  models.py  retrieval.py  server.py
tests/: conftest.py  test_integration.py  test_retrieval.py  test_server.py
tests/integration/: test_service_wiring.py
tests/smoke/: test_live_retrieval.py
tests/unit/: test_retrieval.py  test_server.py
