[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-esg-mcp"
version = "0.1.0"
description = "Claude-first MCP server for Taiwan ESG report retrieval"
readme = "openspec/project-brief.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=0.5.5,<1.0.0",
    "mcp>=1.9.0,<2.0.0",
    "openai>=1.30.0,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.6,<1.0.0",
]

[project.scripts]
claude-esg-mcp = "claude_esg_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-m", "not integration and not smoke"]
markers = [
    "integration: tests that exercise multiple project components or external-like resources",
    "smoke: live tests that require OPENAI_API_KEY and a configured ESG ChromaDB index",
]
